<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/tu_salario_neto_es"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/salarioNeto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="0"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/salario_bruto_anual_es"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/salarioBruto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/cero"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/retenciones"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/retenciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/puntos"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/posibles_deducciones"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/deducciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/no"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20dp"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/volverButton"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/purple"
        android:text="@string/volver"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:cardCornerRadius="16dp">

    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>