<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/salario_bruto_anual"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/salarioBrutoInput"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/salario_minimo"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nPagas"
        android:layout_width="180dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gProfesional"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/numero_pagas"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <Spinner
                android:id="@+id/nPagasSpinner"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:textAlignment="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gProfesional"
        android:layout_width="180dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nPagas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/grupo_profesional"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="24dp"/>

            <Spinner
                android:id="@+id/gProfesionalSpinner"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:textAlignment="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="180dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gDiscapacidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/edad"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <EditText
                android:id="@+id/edadInput"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/edad_minima"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gDiscapacidad"
        android:layout_width="180dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/discapacidad"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="24dp"/>

            <Spinner
                android:id="@+id/discapacidadSpinner"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:textAlignment="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/eCivil"
        android:layout_width="180dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nHijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/estado_civil"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <Spinner
                android:id="@+id/eCivilSpinner"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:textAlignment="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nHijos"
        android:layout_width="180dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eCivil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:text="@string/numero_hijos"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="24dp"/>

            <Spinner
                android:id="@+id/nHijosSpinner"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:textAlignment="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calcularButton"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/purple"
        android:text="@string/calcular"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:cardCornerRadius="16dp">

    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>